--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -288,7 +288,7 @@ protected static Context trueEnter(String name, String origin) {
 }
 ```
 
-- `ThreadLocal` 中存 `Context`，每个线程会有一个 `Context`；
+- `Context` 生命周期靠 `ThreadLocal`，每个线程会有一个 `Context`；
 - `Local cache map` 中存 `EntranceNode`；
 - 用双重检测锁；
 - 新建的 `EntranceNode` 会加到 `ROOT` 中；
@@ -357,3 +357,70 @@ CtEntry *-- Context
 @enduml
 ```
 {% endcomment %}
+
+## 调用链
+
+### 类图
+
+![context-class]({{ site.url }}/assets/imgs/sentinel/chain-class.png)
+{% comment %}
+```plantuml
+@startuml chain类图
+interface ProcessorSlot<T> {
+    + void entry(Context context, ResourceWrapper resourceWrapper, T param, int count, boolean prioritized, Object... args)
+    + void fireEntry(Context context, ResourceWrapper resourceWrapper, Object obj, int count, boolean prioritized, Object... args)
+    + void exit(Context context, ResourceWrapper resourceWrapper, int count, Object... args)
+    + void fireExit(Context context, ResourceWrapper resourceWrapper, int count, Object... args)
+}
+
+abstract class AbstractLinkedProcessorSlot<T> {
+    - AbstractLinkedProcessorSlot<?> next
+}
+
+ProcessorSlot <|-- AbstractLinkedProcessorSlot
+
+class DefaultProcessorSlotChain$1 {
+
+}
+
+AbstractLinkedProcessorSlot <|-- DefaultProcessorSlotChain$1
+
+class NodeSelectorSlot {
+    - Map<String, DefaultNode> map
+}
+
+AbstractLinkedProcessorSlot <|-- NodeSelectorSlot
+@enduml
+```
+{% endcomment %}
+
+- `DefaultProcessorSlotChain$1` 作为 **first** dummy node ？；
+- 在上面 `lookProcessChain` 中会为每个 `Resource` 创建一个 `ProcessorSlotChain`；
+
+### NodeSelectorSlot
+
+
+```java
+public void entry(Context context, ResourceWrapper resourceWrapper, Object obj, int count, boolean prioritized, Object... args)
+        throws Throwable {
+
+    DefaultNode node = map.get(context.getName());
+    if (node == null) {
+        synchronized (this) {
+            node = map.get(context.getName());
+            if (node == null) {
+                node = new DefaultNode(resourceWrapper, null);
+                HashMap<String, DefaultNode> cacheMap = new HashMap<String, DefaultNode>(map.size());
+                cacheMap.putAll(map);
+                cacheMap.put(context.getName(), node);
+                map = cacheMap;
+                // Build invocation tree
+                ((DefaultNode) context.getLastNode()).addChild(node);
+            }
+        }
+    }
+
+    context.setCurNode(node);
+    fireEntry(context, resourceWrapper, node, count, prioritized, args);
+}
+```
