--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -424,3 +424,6 @@ public void entry(Context context, ResourceWrapper resourceWrapper, Object obj, 
     fireEntry(context, resourceWrapper, node, count, prioritized, args);
 }
 ```
+
+- 最主要设置 `curEntry` 的 `curNode`；
+- 创建 `DefaultNode` 到 `EntranceNode` 后。 
