--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -390,6 +390,19 @@ class NodeSelectorSlot {
 }
 
 AbstractLinkedProcessorSlot <|-- NodeSelectorSlot
+
+class StatisticSlot {
+}
+
+AbstractLinkedProcessorSlot <|-- StatisticSlot
+
+
+class FlowSlot {
+    - FlowRuleChecker checker
+}
+
+AbstractLinkedProcessorSlot <|-- FlowSlot
+
 @enduml
 ```
 {% endcomment %}
@@ -425,5 +438,39 @@ public void entry(Context context, ResourceWrapper resourceWrapper, Object obj, 
 }
 ```
 
-- 最主要设置 `curEntry` 的 `curNode`；
+- 最主要设置 `Context::curEntry::curNode`；
 - 创建 `DefaultNode` 到 `EntranceNode` 后。 
+
+### FlowSlot
+
+#### Rule 类图
+
+```plantuml
+@startuml rule类图
+interface Rule {
+    + String getResource()
+}
+
+abstract class AbstractRule {
+    - String resource
+    - String limitApp
+}
+
+Rule <|-- AbstractRule
+
+class FlowRule {
+    - int grade = RuleConstant.FLOW_GRADE_QPS // or ThreadNumber
+    - double count
+    - int strategy = RuleConstant.STRATEGY_DIRECT // or CHAIN
+    - String refResource
+    - int controlBehavior = RuleConstant.CONTROL_BEHAVIOR_DEFAULT
+    - int warmUpPeriodSec = 10
+    - int maxQueueingTimeMs = 500
+    - boolean clusterMode
+    - ClusterFlowConfig clusterConfig
+    - TrafficShapingController controller
+}
+
+AbstractRule <|-- FlowRule
+@enduml
+```
