--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -525,6 +525,23 @@ WarmUpController <|-- WarmUpRateLimiterController
 判断是能够通过，目前只关注本机限制流量：
 
 ```java
+// FlowRuleChecker
+public void checkFlow(Function<String, Collection<FlowRule>> ruleProvider, ResourceWrapper resource, Context context, DefaultNode node, int count, boolean prioritized) throws BlockException {
+    // 没有规则或者没有资源标识
+    if (ruleProvider == null || resource == null) {
+        return;
+    }
+    Collection<FlowRule> rules = ruleProvider.apply(resource.getName());
+    // 该资源有规则则进行检查
+    if (rules != null) {
+        for (FlowRule rule : rules) {
+            if (!canPassCheck(rule, context, node, count, prioritized)) {
+                throw new FlowException(rule.getLimitApp(), rule);
+            }
+        }
+    }
+}
+
 public boolean canPassCheck(FlowRule rule, Context context, DefaultNode node, int acquireCount, boolean prioritized) {
     String limitApp = rule.getLimitApp();
     // limitApp 默认是 default
