--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -403,6 +403,12 @@ class FlowSlot {
 
 AbstractLinkedProcessorSlot <|-- FlowSlot
 
+class DegradeSlot {
+}
+
+AbstractLinkedProcessorSlot <|-- DegradeSlot
+
+
 @enduml
 ```
 {% endcomment %}
@@ -444,6 +450,9 @@ public void entry(Context context, ResourceWrapper resourceWrapper, Object obj, 
 ### FlowSlot
 
 #### Rule 类图
+![flow-rule-class]({{ site.url }}/assets/imgs/sentinel/flow-rule-class.png)
+
+{% comment %}
 
 ```plantuml
 @startuml rule类图
@@ -474,3 +483,76 @@ class FlowRule {
 AbstractRule <|-- FlowRule
 @enduml
 ```
+{% endcomment %}
+
+### DegradeSlot 降级
+![degrade-rule-class]({{ site.url }}/assets/imgs/sentinel/degrade-rule-class.png)
+
+{% comment %}
+
+```plantuml
+@startuml rule类图
+interface Rule {
+    + String getResource()
+}
+
+abstract class AbstractRule {
+    - String resource
+    - String limitApp
+}
+
+Rule <|-- AbstractRule
+
+class DegradeRule {
+    - int grade = RuleConstant.DEGRADE_GRADE_RT 响应时间  
+    //OR exception ratio 异常比例 
+    OR exception count 异常数量
+    - double count
+    - int timeWindow // 熔断打开后恢复的时间窗口，后变成半开
+    - String refResource
+    - int minRequestAmount // 熔断触发最小请求
+    - double slowRatioThreshold
+    - int maxQueueingTimeMs = 500
+    - int statIntervalMs
+}
+
+AbstractRule <|-- DegradeRule
+@enduml
+```
+
+有三种模式：
+- 平均响应时间；
+- 异常比例；
+- 异常数量。
+
+![degradeslot]({{ site.url }}/assets/imgs/sentinel/degradeslot.png)
+
+```plantuml
+@startuml DegradeSlot 类图
+class DegradeSlot {
+
+}
+interface CircuitBreaker {
+    + DegradeRule getRule()
+    + boolean tryPass(Context context)
+    + State currentState()
+    + void onRequestComplete(Context context)
+}
+
+DegradeSlot -- CircuitBreaker
+
+enum State {
+    OPEN
+    HALF_OPEN
+    CLOSED
+}
+
+CircuitBreaker -- State
+
+class DegradeRule {
+}
+
+CircuitBreaker *-- DegradeRule
+@enduml
+```
+{% endcomment %}
