--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -295,6 +295,7 @@ protected static Context trueEnter(String name, String origin) {
 
 #### 类图
 ![context-class]({{ site.url }}/assets/imgs/sentinel/context-class.png)
+
 {% comment %}
 ```plantuml
 @startuml context 类图
@@ -363,6 +364,7 @@ CtEntry *-- Context
 ### 类图
 
 ![context-class]({{ site.url }}/assets/imgs/sentinel/chain-class.png)
+
 {% comment %}
 ```plantuml
 @startuml chain类图
@@ -454,10 +456,6 @@ public void entry(Context context, ResourceWrapper resourceWrapper, Object obj, 
 
 {% comment %}
 
-![rule-class]({{ site.url }}/assets/imgs/sentinel/rule-class.png)
-
-{% comment %}
-
 ```plantuml
 @startuml rule类图
 interface Rule {
@@ -528,6 +526,7 @@ WarmUpController <|-- WarmUpRateLimiterController
 @enduml
 ```
 {% endcomment %}
+
 判断是能够通过，目前只关注本机限制流量：
 
 ```java
@@ -673,6 +672,7 @@ class DegradeRule {
 AbstractRule <|-- DegradeRule
 @enduml
 ```
+{% endcomment %}
 
 有三种模式：
 - 平均响应时间；
@@ -680,6 +680,8 @@ AbstractRule <|-- DegradeRule
 - 异常数量。
 
 ![degradeslot]({{ site.url }}/assets/imgs/sentinel/degradeslot.png)
+
+{% comment %}
 
 ```plantuml
 @startuml DegradeSlot 类图
