--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -696,3 +696,53 @@ CircuitBreaker *-- DegradeRule
 
 ## 动态数据源
 
+以 `Naocs` 为例，代码详见 `NacosDataSourceDemo`：
+
+```java
+// NacosDataSourceDemo.java
+// nacos server ip
+private static final String remoteAddress = "localhost";
+// nacos group
+private static final String groupId = "Sentinel:Demo";
+// nacos dataId
+private static final String dataId = "com.alibaba.csp.sentinel.demo.flow.rule";
+
+private static void loadRules() {
+    ReadableDataSource<String, List<FlowRule>> flowRuleDataSource = new NacosDataSource<>(remoteAddress, groupId, dataId,
+            source -> JSON.parseObject(source, new TypeReference<List<FlowRule>>() {
+            }));
+    FlowRuleManager.register2Property(flowRuleDataSource.getProperty());
+}
+```
+
+```java
+private static final FlowPropertyListener LISTENER = new FlowPropertyListener();
+private static SentinelProperty<List<FlowRule>> currentProperty = new DynamicSentinelProperty<List<FlowRule>>();
+static {
+    currentProperty.addListener(LISTENER);
+}
+private static final class FlowPropertyListener implements PropertyListener<List<FlowRule>> {
+
+    @Override
+    public void configUpdate(List<FlowRule> value) {
+        Map<String, List<FlowRule>> rules = FlowRuleUtil.buildFlowRuleMap(value);
+        if (rules != null) {
+            flowRules.clear();
+            flowRules.putAll(rules);
+        }
+        RecordLog.info("[FlowRuleManager] Flow rules received: " + flowRules);
+    }
+
+    @Override
+    public void configLoad(List<FlowRule> conf) {
+        Map<String, List<FlowRule>> rules = FlowRuleUtil.buildFlowRuleMap(conf);
+        if (rules != null) {
+            flowRules.clear();
+            flowRules.putAll(rules);
+        }
+        RecordLog.info("[FlowRuleManager] Flow rules loaded: " + flowRules);
+    }
+}
+```
+
+`DynamicSentinelProperty` 动态监听变化，调用 `listener`。
