--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -8,6 +8,44 @@ categories: Java
 
 # Docker
 
+```bash
+docker top db
+```
+
+- `PID`: Process ID;
+- `PPID`: Parent Process ID。
+
+```bash
+pgrep <program>
+```
+
+获取 `program` 进程号。
+
+```bash
+cat /proc/$PID/environ
+# 一样
+docker exec -it <program> env
+```
+
+## 命名空间
+
+命名空间限制了进程可以看到以及可以访问系统的特定部分（其他网络接口以及进程）。
+
+当容器启动，`container runtime` e.g. `Docker`，会创建新的 **命名空间** 来沙箱进程。
+
+进程跑在自己 `Pid namespace`，就像系统上只有这一个进程一样。
+
+- Mount (mnt)
+- Process ID (pid)
+- Network (net)
+- Interprocess Communication (ipc)
+- UTS (hostnames)
+- User ID (user)
+- Control group (cgroup)
+
+
+`unshare` 和 `nsenter` 可以用来
+
 ## `Chroot`
 - 容器进程的最重要的部分是独立于 `host` 的不同文件；
 - 给进程提供了相对于宿主 `OS` 不同的 `root` 目录，这允许了 上面的1；
