--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -46,11 +46,11 @@ docker exec -it <program> env
 
 `unshare` 和 `nsenter` 可以用来
 
-## `Chroot`
+## Chroot
 - 容器进程的最重要的部分是独立于 `host` 的不同文件；
 - 给进程提供了相对于宿主 `OS` 不同的 `root` 目录，这允许了 上面的1；
 
-## `CGroup`
+## CGroup
 - 限制了进程能 `consume` 的资源量； `/proc` 目录下，映射到 `/sysfs/cgroup/` 目录；
 - 所有 `docker` 内存在：`/sys/fs/cgroup/memory/docker/`。
 
