--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -90,11 +90,15 @@ docker save image > image.tar
 tar cv --files-from /dev/null | docker import - empty
 ```
 
+---
+
 ### 部署第一个 container
 
 ```bash
 docker run -d image
 ```
+
+---
 
 #### 查看
 ```bash
@@ -106,7 +110,9 @@ docker insepct <container-id>
 docker logs <container-id>
 ```
 
-#### 端口映射
+---
+
+### 端口映射
 ```bash
 # 6379 到随机端口
 docker run -d --name redisDynamic -p 6379 redis:latest
@@ -114,14 +120,18 @@ docker run -d --name redisDynamic -p 6379 redis:latest
 docker port redisDynamic 6379
 ```
 
-#### 目录映射
+---
+
+### 目录映射
 ```bash
 docker run -d --name redisMapped -v <host-dir>:<contiainer-dir> redis
 # e.g.
 docker run -d --name redisMapped -v /opt/docker/data/redis:/data redis
 ```
 
-#### 前台跑
+---
+
+### 前台跑
 
 ```bash
 # 跑 ubuntu 并且执行 ps 命令
@@ -130,7 +140,9 @@ docker run ubuntu ps
 docker run -it ubuntu bash
 ```
 
-#### 编写第一个 Dockerfile
+---
+
+### 编写第一个 Dockerfile
 
 ```dockerfile
 FROM nginx:alpine
@@ -150,7 +162,9 @@ EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 ```
 
-#### node.js
+---
+
+### node.js
 
 ```Dockerfile
 FROM node:10-alpine
@@ -174,13 +188,19 @@ CMD ["npm", "start"]
 docker run -d --name my-production-running-app -e NODE_ENV=production -p 3000:3000 my-nodejs-app
 ```
 
-#### OnBuild
+---
 
-#### ignore file
+### OnBuild
+
+---
+
+### ignore file
 
 `.dockerignore` 文件放入不打进容器的文件列表。
 
-#### Data Container
+---
+
+### Data Container
 
 唯一用于 存放、管理数据。
 
@@ -202,7 +222,9 @@ docker export dataContainer > dataContainer.tar
 docker import dataContainer.tar
 ```
 
-#### link 连接网络
+---
+
+### link 连接网络
 
 `--link <container-name|id>:<alias>` 
 ```bash
@@ -219,7 +241,9 @@ docker run --link redis-server:redis alpine env
 172.18.0.2      redis bac813a4509b redis-server
 ```
 
-#### Networks
+---
+
+### Networks
 
 ```bash
 # 创建 network
@@ -239,7 +263,6 @@ docker network inspect frontend-network
 # 网络断连
 docker network disconnect frontend-network redis
 ```
-
 
 或者使用
 
