--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -227,15 +227,31 @@ docker import dataContainer.tar
 ### link 连接网络
 
 `--link <container-name|id>:<alias>` 
-```bash
-# e.g.
-docker run --link redis-server:redis alpine env
-```
 
 做两件事：
 - 基于连接的容器设置环境变量，可以通过名字来引用端口、IP 等信息；
 - 更新 `HOSTS` 文件
 
+#### 修改 environment variables
+```bash
+# e.g. alpine env 命令会输出所有 environment variables
+docker run --link redis-server:redis alpine env
+```
+输出：
+```
+REDIS_PORT=tcp://172.18.0.2:6379
+REDIS_PORT_6379_TCP=tcp://172.18.0.2:6379
+REDIS_PORT_6379_TCP_ADDR=172.18.0.2
+REDIS_PORT_6379_TCP_PORT=6379
+REDIS_PORT_6379_TCP_PROTO=tcp
+REDIS_NAME=/elastic_sammet/redis
+REDIS_ENV_GOSU_VERSION=1.10
+REDIS_ENV_REDIS_VERSION=4.0.11
+REDIS_ENV_REDIS_DOWNLOAD_URL=http://download.redis.io/releases/redis-4.0.11.tar.gz
+REDIS_ENV_REDIS_DOWNLOAD_SHA=fc53e73ae7586bcdacb4b63875d1ff04f68c5474c1ddeda78f00e5ae2eed1bbb
+```
+
+#### 修改 hosts
 ```
 #               alias 原始名称 hash-id
 172.18.0.2      redis bac813a4509b redis-server
@@ -280,6 +296,89 @@ docker run --net=frontend-network2 alpine ping -c1 db
 ```
 
 ---
+
+### Volumes
+
+为了共享数据将宿主机的目录映射到容器。**双向**的。
+
+```
+# ro: read only
+-v <host-dir>:<container-dir>[:ro]
+--volues-from <container-name|id>
+```
+
+---
+
+### Log Files
+
+容器启动，`Docker` 会跟踪**标准输出**和**标准错误**。
+
+```bash
+docker logs <container-name|id>
+```
+
+默认以 `json 文件` 存储。可替换为：
+
+- Syslog：写入主机的 `central syslog`
+- None: 关闭
+
+```bash
+docker run --log-driver=syslog <container>
+```
+
+---
+
+### 重启策略
+
+`Docker` 认为任何以**非 0 状态退出**都是 `crash`，默认 `crash container` 保持停止。
+
+```bash
+# 有限次数重启
+docker run --restart-on-failure:<num> <container>
+# 一直重启
+docker run --restart=always <container>
+```
+
+---
+
+### 元数据和标签
+
+推荐格式：
+- 使用 `reverse DNS` 方式: `io.github.gh0st99`；
+- 小写；
+- [a-z0-9-.]
+
+```bash
+# 加一个标签
+docker -l key=value
+# 从文件加入
+docker -label-file=<label file path>
+
+# 通过标签过滤 container
+docker ps --filter "label=key=value"
+docker images --filter "label=key=value"
+
+# 给 docker 加标签
+docker -d \
+  -H unix:///var/run/docker.sock \
+  --label com.katacoda.environment="production" \
+  --label com.katacoda.storage="ssd"
+```
+
+```dockerfile
+LABEL vendor=Gh0st99
+LABEL io.github.gh0st99.version=0.0.1\io.github.gh0st99.build-date=2020-09-15:09:29:46z
+```
+---
+
+### 负载均衡容器
+
+容器互相交流有两种方式:
+- 修改 `environment variables` 和 `hosts` 文件；
+- 使用 `Service Discovery` 模式。
+  - 使用三方系统识别目标系统的位置。
+
+#### Nginx Proxy
 
 # K8S 教程
 
