--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -380,6 +380,52 @@ LABEL io.github.gh0st99.version=0.0.1\io.github.gh0st99.build-date=2020-09-15:09
 
 #### Nginx Proxy
 
+---
+
+### docker compose
+
+---
+
+### docker stats
+
+```bash
+# 单一
+docker stats <container name|id>
+# 所有运行
+docker ps -q | xargs docker stats
+```
+
+### docker multi-stage builds
+
+```dockerfile
+# 第一阶段， 准备 Go 环境，编译 binary
+FROM golang:1.6-alpine
+
+RUN mkdir /app
+ADD . /app/
+WORKDIR /app
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
+
+# 第二阶段，把第一阶段产物复制过来
+FROM alpine
+EXPOSE 80
+CMD ["/app"]
+
+# 将第一阶段生成的 main 复制到根目录改名 app
+COPY --from=0 /app/main /app
+```
+
+---
+
+### 美化输出
+
+```bash
+docker ps --format '{{.Names}} container is using {{.Image}} image'
+docker ps -q | xargs docker inspect --format '{{ .Id }} - {{ .Name }} - {{ .NetworkSettings.IPAddress }}'
+```
+
+---
+
 # K8S 教程
 
 ## 部署应用
