--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -77,7 +77,18 @@ docker stats db --no-stream
 
 ## Contiainer
 
-`container image` 是 包含了 `tar files` 的 `tar file`。
+### image
+`container image` 是
+- 包含了 `tar files` 的 `tar file`；
+- `files` + `metadata`；
+  - metadata:
+    - author；
+    - 启动的 `command`；
+    - 设置的 `environment variables` 等；
+- 这些文件组成了我们容器的 `root filesystem`；
+- 由 `layers` 组成，概念上堆叠起来；
+- 每个 `layer` 可增加、删除、修改 `file` 和 `metadata`；
+- 共享 `layer` 优化磁盘使用、传输时间以及内存使用。
 
 ```bash
 docker save image > image.tar
@@ -85,10 +96,54 @@ docker save image > image.tar
 
 `busy-box` 安装。
 
-空 `image`
+**空 `image`**
 ```bash
 tar cv --files-from /dev/null | docker import - empty
 ```
+
+**空 image** 叫 `scratch`，允许从 `scratch` 上构建。
+使用 `docker import` 加载 `tarball` 到 `docker`。
+
+**`docker commit`** 
+
+保存 `container` 的所有变化到新的 `layer`，创建新的 `image`。
+
+**`docker build`**
+优先用这种。
+
+`low` 方式：
+```bash
+docker run -it ubuntu
+# in ubuntu
+apt-get update && apt-get install figlet
+# out ubuntu
+docker diff <ubuntu container id|name>
+docker commit <ubuntu container id|name> <newImageId>
+docker tag <newImageId> figlet
+```
+
+**image namespace**
+
+- 官方镜像 e.g. `ubuntu`;
+- 用户或组织镜像 e.g. `jpetazzo/clock`；
+- 自供 `docker.elastic.co/elasticsearch/elasticsearch:7.9.1-arm64`
+
+
+---
+
+### layer
+
+![read-write-layer]({{ site.url }}/assets/imgs/k8s/rw-layer.png)
+
+---
+
+### containers vs. images
+
+- `image`: 只读文件系统；
+- `container`: 封装的一系列进程；跑在上面的只读文件系统的副本中；
+- 使用了 `copy-on-write` 代替普通的 `copy`。
+
+![read-write-layer]({{ site.url }}/assets/imgs/k8s/multi-layers.png)
 
 ---
 
@@ -108,6 +163,17 @@ docker ps
 docker insepct <container-id>
 # 查看日志
 docker logs <container-id>
+```
+
+---
+
+### 停止
+
+```bash
+# 立即杀死
+docker kill <container id|name> ...
+# 发 TREM 信号， 10s 后发 KILL
+docker stop <container id|name>
 ```
 
 ---
@@ -138,6 +204,8 @@ docker run -d --name redisMapped -v /opt/docker/data/redis:/data redis
 docker run ubuntu ps
 # 进入容器访问 bash shell
 docker run -it ubuntu bash
+# -i: 我们与容器 stdin 连接
+# -t: 我们想要一个 psedo-terminal(伪终端)
 ```
 
 ---
@@ -160,6 +228,18 @@ FROM nginx:1.11-alpine
 COPY index.html /usr/share/nginx/html/index.hml
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+```
+
+`UNIX` 中开始新的程序：
+- `fork()` 创建子进程；
+- `execve()` 替换新的子进程运行。
+  - `execve(program, [list, of, arguments])`；
+  - `sh -c` 就是用 `shell` 来分割命令参数。
+
+```dockerfile
+# 这里还是用 sh，但是 figlet PID = 1
+# figlet 开始时，sh 被替换
+CMD exec figlet -f script hello
 ```
 
 ---
