--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -143,7 +143,7 @@ docker tag <newImageId> figlet
 - `container`: 封装的一系列进程；跑在上面的只读文件系统的副本中；
 - 使用了 `copy-on-write` 代替普通的 `copy`。
 
-![read-write-layer]({{ site.url }}/assets/imgs/k8s/multi-layers.png)
+![multi-layers]({{ site.url }}/assets/imgs/k8s/multi-layers.png)
 
 ---
 
@@ -230,6 +230,7 @@ EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 ```
 
+#### CMD & ENTRYPOINT
 `UNIX` 中开始新的程序：
 - `fork()` 创建子进程；
 - `execve()` 替换新的子进程运行。
@@ -242,6 +243,26 @@ CMD ["nginx", "-g", "daemon off;"]
 CMD exec figlet -f script hello
 ```
 
+- `CMD` 定义了一个默认执行的指令（如果没有的话）；
+- 能在文件的**任何位置**；
+- 后面的 `CMD` 会替换前面的；多条没有用。
+
+
+```dockerfile
+FROM ubuntu
+RUN apt-get update
+RUN ["apt-get", "install", "figlet"]
+# 定义了 base 指令以及参数
+# 命令行参数加在这些后面
+ENTRYPOINT ["figlet", "-f", "script"]
+```
+执行下面命令：
+
+```bash
+docker run figlet salut
+# 等同于
+sh -c "figlet -f script" salut
+```
 ---
 
 ### node.js
