--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -263,6 +263,14 @@ docker run figlet salut
 # 等同于
 sh -c "figlet -f script" salut
 ```
+
+`CMD` + `ENTRYPOINT`:
+
+```dockerfile
+ENTRYPOINT ["figlet", "-f", "script"]
+# 当命令行没有参数，CMD 添加在后面，否则被替代
+CMD ["hello world"]
+```
 ---
 
 ### node.js
@@ -516,6 +524,69 @@ CMD ["/app"]
 COPY --from=0 /app/main /app
 ```
 
+```dockerfile
+# 第一阶段昵称 compiler
+FROM ubuntu AS compiler
+RUN apt-get update
+RUN apt-get install -y build-essential
+COPY hello.c /
+RUN make hello
+
+FROM ubuntu
+# 将第一阶段的 hello 复制到本阶段
+COPY --from=compiler /hello /hello
+CMD /hello
+```
+
+运行：
+```bash
+docker build -t hellomultistage .
+docker run hellomultistage
+# 打中间状态的 image
+docker build --stage compiler --tag hellocompiled
+```
+
+- `Dockerfile` 每一行创建一个新 `layer`；
+- 联合 `&&` 以及 `\`。
+
+---
+
+### 优化 dockerfile
+
+#### 善用 COPY
+```dockerfile
+FROM python
+# 这里使用 COPY 创建 layer，能更有效缓存
+COPY requirements.txt /tmp/requirements.txt
+# 只有 requirements.txt 变时才 install
+RUN pip install -qr /tmp/requirements.txt
+WORKDIR /src
+COPY . .
+EXPOSE 5000
+CMD ["python", "app.py"]
+```
+
+#### chown，chomd，mv 要小心
+
+- layers **无法有效**的存储**权限**和**所有者**的改变；
+- 对于 `mv` 也一样；
+- 所以这些指令在 `RUN` 之后都会拷贝整个文件。
+
+```dockerfile
+COPY some-file .
+# 拷贝 some-file
+RUN chown www-data:www-data some-file
+# 拷贝 some-file
+RUN chmod 644 some-file
+# 拷贝 some-file
+RUN mv some-file /var/www
+```
+
+解决之道：
+- 使用一个 `layer` 解决；
+- 使用 `COPY --chown=user:group src dest`；
+  - `user` 必须在 `/etc/passwd` 或 `/etc/group` 中。
+- 在本地设置好文件权限，`COPY` 会保留。
 ---
 
 ### 美化输出
