--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -210,6 +210,18 @@ docker run -it ubuntu bash
 
 ---
 
+### name &
+
+```bash
+# 启动时指定名字
+docker run --name
+
+# 改名
+docker rename
+```
+
+---
+
 ### 编写第一个 Dockerfile
 
 ```dockerfile
@@ -457,17 +469,30 @@ docker run --restart=always <container>
 - 小写；
 - [a-z0-9-.]
 
+用途：
+- vhost
+- backup schedule
+- ownership
+
 ```bash
 # 加一个标签
 docker -l key=value
 # 从文件加入
 docker -label-file=<label file path>
+```
 
 # 通过标签过滤 container
-docker ps --filter "label=key=value"
-docker images --filter "label=key=value"
+
+```bash
+# 过滤包含特殊标签
+docker ps --filter lable=key
+# 过滤包含特殊值的特殊标签
+docker ps --filter label=key=value
+docker images --filter label=key=values
+```
 
 # 给 docker 加标签
+```bash
 docker -d \
   -H unix:///var/run/docker.sock \
   --label com.katacoda.environment="production" \
