--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -370,6 +370,66 @@ REDIS_ENV_REDIS_DOWNLOAD_SHA=fc53e73ae7586bcdacb4b63875d1ff04f68c5474c1ddeda78f0
 
 ### Networks
 
+#### publish all
+```bash
+# exposed port -> 随机端口
+docker run -d -P nginx
+# 查看镜像 exposed port
+docker inspect --format '{{.Config.ExposedPorts}}' nginx
+# 查看映射的端口
+docker port <container id> <exposed port>
+# 查看 container ip
+docker inspect --format '{{ .NetworkSettings.IPAddress }}' <yourContainerID>
+```
+
+#### network driver
+
+![single-container-network]({{ site.url }}/assets/imgs/k8s/single-container-network.png)
+
+
+![multi-container-multi-network]({{ site.url }}/assets/imgs/k8s/multi-container-multi-network.png)
+
+
+- bridge(default)
+- none
+- host
+- container
+
+**default bridge**
+- 容器默认获得一个虚拟 `eth0`；
+  - 除了自己的 `lo` **loopback interface**
+- `eth0` 通过 `veth pair`(virtual Ethernet devices) 提供；
+  - 连接两个 `network namespace` 的方法。
+- 另一端连接到 `Docker Bridge`；
+- `ip` 地址是私有、内部的子集；
+  - 默认 `172.17.0.0/16`，通过 `--bip` 配置；
+- 出口流量走 `iptables MASQUERADE` 规则；
+- 入口流量走 `iptables DNAT` 规则；
+- 容器有自己的路由、`iptables` 规则。
+
+**null driver**
+```bash
+# 只有 lo，没有 eth0，对于独立或不可靠
+docker run --net none
+```
+
+**host driver**
+```bash
+# 看到和访问 host 的网络接口
+# 绑定任何地址和接口，流量不走 NAT，bridge, veth
+# 对于性能高敏
+docker run --net host
+```
+
+**container driver**
+```bash
+# 复用其他 container 的网络栈
+# 共享 接口，ip，路由，iptables
+# 通过 lo 交流
+docker run --net <container:id>
+```
+
+#### network
 ```bash
 # 创建 network
 docker network create backend-network
@@ -595,6 +655,39 @@ RUN mv some-file /var/www
 ```bash
 docker ps --format '{{.Names}} container is using {{.Image}} image'
 docker ps -q | xargs docker inspect --format '{{ .Id }} - {{ .Name }} - {{ .NetworkSettings.IPAddress }}'
+```
+
+---
+
+### 容器进程 vs. 主机进程
+
+- 两者每个线程都属于 `namespaces` & `cgroups`；
+  - 属于上面的俩决定进程的所见和所做；
+- 以特定的 `UID` 运行；
+  - UID = 0， root
+
+---
+
+### 分析 container
+
+```bash
+# 查看异常退出的 container
+docker ps 
+
+# 方法 1.
+## 查看变更的文件
+docker diff <container id>
+## 复制出来日志等有用文件查看
+docker cp <container id>:/var/log/error.log .
+
+# 方法 2.
+## 创建新的镜像
+docker commit <container id> debugimage
+## 自定义入口
+docker run -it --entrypoing sh sh debugimage
+
+## 生成 tar 文件，并查看里面的内容
+docker export <container id> | tar tv
 ```
 
 ---
