--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -468,13 +468,41 @@ docker network disconnect frontend-network redis
 docker network create frontend-network
 # connect 已有的容器到网络
 docker network connect frontend-network redis
-
-# alias 
-docker network create frontend-network2
-docker network connect --alias db frontend-network2 redis
-# 这里 ping db 可行
-docker run --net=frontend-network2 alpine ping -c1 db
 ```
+
+**多container 在一个网络**
+```bash
+docker network create dev
+# 创建 es 指定网络
+docker run -d --name es --net dev elasticsearch:2
+# 可以 ping 通 es
+docker run -ti --net dev alpine ping es
+```
+
+**相同 image 多个 container**
+
+```bash
+docker network create prod
+# 创建两个 es 在网络，alias 同一名称
+docker run -d --name prod-es-1 --net-alias es --net prod elasticsearch:2
+docker run -d --name prod-es-2 --net-alias es --net prod elasticsearch:2
+# nslookup 会返回两条记录，round robin
+docker run --net prod --rm alpine nslookup es
+
+# output
+# Server:		127.0.0.11
+# Address:	127.0.0.11:53
+
+# Name:	es
+# Address: 172.22.0.3
+# Address: 172.22.0.2
+```
+
+> `docker-compose` 自动创建**网络**和**网络别名**。
+
+> `round robin` 不可靠，不要作为负载，而且新的节点需要重新 `resolve`。 
+
+> 由于一个 `container` 可能加入多个网络，可能 `es` 在多个网络中有不同 **IP**，可以使用 `es.dev` 和 `es.prod` 区分。
 
 ---
 
