--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -516,6 +516,10 @@ docker run --net prod --rm alpine nslookup es
 --volues-from <container-name|id>
 ```
 
+- `volumes` 不是在 `host` 和 `container` 间复制和同步；
+- 是 `bind mounts`，类似于**符号链接**，但在不同级别；
+- 修改文件实时可见，是同一文件。
+
 ---
 
 ### Log Files
