--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -510,16 +510,34 @@ docker run --net prod --rm alpine nslookup es
 
 为了共享数据将宿主机的目录映射到容器。**双向**的。
 
+```dockerfile
+VOLUME /uploads
+```
+或 
+```bash
+docker run -d -v /uploads myapp
+```
+或
 ```
 # ro: read only
--v <host-dir>:<container-dir>[:ro]
---volues-from <container-name|id>
+docker run --volues-from <container-name|id>
 ```
+
+**特性**：
 
 - `volumes` 不是在 `host` 和 `container` 间复制和同步；
 - 是 `bind mounts`，类似于**符号链接**，但在不同级别；
 - 修改文件实时可见，是同一文件。
 
+**用于**：
+
+- 绕过 `copy-on-write`：
+  - 获取原生硬盘 `I/O` 性能；
+  - leave some files out of `docker commit`。
+- 多容器间共享**文件夹**；
+- 主机和容器间共享**文件夹**、**单个文件**；
+- 远程存储;
+- 不能用于 ~~k8s~~,~~swarm~~。
 ---
 
 ### Log Files
