--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -538,6 +538,9 @@ docker run --volues-from <container-name|id>
 - 主机和容器间共享**文件夹**、**单个文件**；
 - 远程存储;
 - 不能用于 ~~k8s~~,~~swarm~~。
+
+**使用 --mount**
+
 ---
 
 ### Log Files
@@ -764,6 +767,12 @@ docker run -it --entrypoing sh sh debugimage
 ## 生成 tar 文件，并查看里面的内容
 docker export <container id> | tar tv
 ```
+
+---
+
+### init system
+
+`init system`： PID 1。
 
 ---
 
