--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -29,7 +29,7 @@ docker exec -it <program> env
 
 ---
 
-## 命名空间
+## Namespaces（命名空间）
 
 命名空间限制了进程可以看到以及可以访问系统的特定部分（其他网络接口以及进程）。
 
@@ -45,8 +45,34 @@ docker exec -it <program> env
 - User ID (user)
 - Control group (cgroup)
 
+**创建命名空间**：
+- `clone()` 创建新线程和进程；
+  > 新进程能复用 none/all/some 其父命名空间。
+- 在 shell 中 `unshare()`。
 
-`unshare` 和 `nsenter` 可以用来
+**访问命名空间**：`setns()`。
+
+**声明周期**：
+- 命名空间最后一个进程退出，命名空间销毁；
+- 移除所有相关资源。
+
+> ll /proc/<self|pid>/ns
+
+**UTS namespace**
+- UTS= UNIX time sharing；
+- gethostname/sethostname；
+- 为 `container` 设置自定义 `hostname`；
+- 设置 `NIS domain`。
+
+**Net namespace**
+- 每个有自己私有的网络栈；
+  - 网络接口(包括 `lo`)；
+  - 路由表；
+  - `iptables` 链和规则；
+  - sockets（通过 `ss`, `netstat` 查看）。
+- 每个创建一个 `veth pair`；
+  - 一个 `veth` 在**容器网络命名空间**，重命名为 `eth0`；
+  - 另一个 `veth` 在主机的 `host`，例如 `docker0` bridge。
 
 ---
 
@@ -562,6 +588,57 @@ docker run --log-driver=syslog <container>
 
 ---
 
+### 日志设置
+
+```bash
+# max-size 可以日志滚动
+# max-file 限制文件数量
+docker run --log-opt max-size=10m --log-opt max-file=3 elasticsearch
+```
+
+插件：
+
+- json-file
+- Syslog
+- journald
+- gelf
+- fluentd
+- splunk
+
+---
+
+### 资源限制
+
+#### RAM
+
+如果进程用了太多的内存。
+- 如果有 `swap` 使用之；
+- 没有足够的 `swap` 空间，调用 `OOM killer`；
+- `OOM killer` 尝试杀进程；
+- 可能杀无关进程。
+
+
+`cgroup` 只杀超过限制的 `container`。
+
+```bash
+# 物理 RAM
+# 超过 100MB，如果 swap 能用，不会被杀
+docker run --memory 100m python
+# 总 RAM(RAM + swap)
+docker run --memory 100m --memory-swap 100m python
+```
+
+#### CPU
+
+- `--cpu-shares 1024`，相对优先级；
+- `--cpus 0.1` 10%, `--cpus 10` 10 个 CPU；
+- `--cpuset-cpus 3,5,7`，使用 3，5，7 号 cpu。
+
+#### Disk
+
+
+---
+
 ### 重启策略
 
 `Docker` 认为任何以**非 0 状态退出**都是 `crash`，默认 `crash container` 保持停止。
@@ -762,7 +839,7 @@ docker cp <container id>:/var/log/error.log .
 ## 创建新的镜像
 docker commit <container id> debugimage
 ## 自定义入口
-docker run -it --entrypoing sh sh debugimage
+docker run -ti --entrypoint sh debugimage
 
 ## 生成 tar 文件，并查看里面的内容
 docker export <container id> | tar tv
@@ -773,6 +850,39 @@ docker export <container id> | tar tv
 ### init system
 
 `init system`： PID 1。
+- 创建其他进程；
+- 获得孤立的僵尸进程。
+  - 进程**退出**时，变僵尸（`top` 中标记为 `Z`）；
+  - 其父进程必须 `reap` 僵尸进程。调用 `waitpid()` 获取退出状态；
+  - 如果进程退出，其子进程成为孤儿；
+  - 这些孤儿进程 `re-parent` 到 `PID 1`。
+
+
+> 应用以 `PID 1` 跑。
+
+`Docker` 自动提供一个 `init`(`tinit`) 进程：
+- 获取僵尸进程；
+- 转发信号；
+- 当子进程退出，`tinit` 退出。
+
+```bash
+docker run jpetazzo/hamba 80 www1:80 www2:80
+```
+其 **dockerfile** 为：
+
+```Dockerfile
+FROM alpine
+RUN apk update && apk add haproxy
+ADD hamba /usr/local/bin/hamba
+ENV HOME /run
+VOLUME /run
+ENTRYPOINT ["hamba"]
+```
+
+这里 `entrypoint` 干了：
+- 解析参数；
+- 生成配置文件；
+- 启动实际服务。
 
 ---
 
