--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -74,6 +74,31 @@ docker exec -it <program> env
   - 一个 `veth` 在**容器网络命名空间**，重命名为 `eth0`；
   - 另一个 `veth` 在主机的 `host`，例如 `docker0` bridge。
 
+**Mnt namespace**
+- 进程有自己的 `root fs`（**chroot**）；
+- 拥有私有的 `mounts`；
+  - 隔离 `/tmp`
+  - `/proc`, `/sys`
+  - mount 远程文件系统或敏感数据，只有允许的进程能见到。
+
+**PID namespace**
+- 在一个 `PID namespace` 下的进程只能见同 `namespace` 下的进程；
+- 每个 `PID namespace` 都从 **1** 开始；
+- `PID1` 的挂了，真个命名空间被杀；
+- 可以折叠；
+- `ps` 可以看到其他，但是不能杀。
+
+```bash
+# 能 ps 到其他
+sudo unshare --pid --fork
+# mount /proc unshare mount namespace
+sudo unshare --pid --fork --mount-proc
+```
+
+**IPC**
+
+**User**
+
 ---
 
 ## Chroot
@@ -529,6 +554,53 @@ docker run --net prod --rm alpine nslookup es
 > `round robin` 不可靠，不要作为负载，而且新的节点需要重新 `resolve`。 
 
 > 由于一个 `container` 可能加入多个网络，可能 `es` 在多个网络中有不同 **IP**，可以使用 `es.dev` 和 `es.prod` 区分。
+
+---
+
+### container network 原理
+
+```bash
+# 创建一个有自己 net ns 的进程
+sudo unshare --net
+
+# 在新进程中，无法 ping 通
+ping 1.1
+# 同样在这里，只有一个 lo 
+ip link ls
+
+# 在 host，创建 veth pair
+sudo ip link add name in_host type veth peer name in_netns
+# 同样，设置 host side（in_host）
+sudo ip link set in_host master docker0 up
+
+# 在新进程中，检查 PID
+echo $$
+
+# 在 host 中，将另一端(in_netns) 到新进程中
+sudo ip link set in_netns netns <PID>
+
+# 在新进程中
+ip link set lo up
+# 启动 veth 并且重命名为 eth0
+ip link set in_netns name eth0 up
+
+# 在 host 中查看 docker bridge
+ip addr ls dev docker0
+# output like:
+# 6: docker0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
+#     link/ether 02:42:58:e0:aa:9d brd ff:ff:ff:ff:ff:ff
+#     inet 172.17.0.1/16 brd 172.17.255.255 scope global docker0
+#        valid_lft forever preferred_lft forever
+#     inet6 fe80::42:58ff:fee0:aa9d/64 scope link
+#        valid_lft forever preferred_lft forever
+
+# 在新进程中，设置 ip 以及默认路由
+ip addr add 172.17.0.99/24 dev eth0
+ip route add default via 172.17.0.1
+# 接着就能 ping 通
+ping 1.1
+```
+
 
 ---
 
