--- a/_posts/2020-09-11-K8S 教程笔记.md
+++ b/_posts/2020-09-11-K8S 教程笔记.md
@@ -108,9 +108,18 @@ sudo unshare --pid --fork --mount-proc
 
 ---
 
-## CGroup
+## CGroup(Control Groups)
 - 限制了进程能 `consume` 的资源量； `/proc` 目录下，映射到 `/sysfs/cgroup/` 目录；
-- 所有 `docker` 内存在：`/sys/fs/cgroup/memory/docker/`。
+  - memory
+  - CPU
+  - block I/O
+- 所有 `docker` 内存在：`/sys/fs/cgroup/memory/docker/`；
+- 聚合进程干：
+  - freezer(SIGSTOP/SIGCONT)
+  - perf_event(收集多核性能事件)
+  - cpuset(指定到哪些核运行)
+- **pids cgroup**限制组内的进程数量；
+- **devices cgroup**限制设备节点。
 
 ### 限制内存使用
 
@@ -123,6 +132,40 @@ echo 8000000 > /sys/fs/cgroup/memory/docker/$DBID/memory.limit_in_bytes
 ```bash
 docker stats db --no-stream
 ```
+
+### Memory cgroup
+
+**ACCOUNTING**：
+- 跟踪使用的页：
+  - file
+  - anonymous(stack, heap, anonymous mmap)
+  - active
+  - inactive
+- 每个页都归于一组；
+- 每个页可在多组中共享；
+
+```bash
+cat /sys/fs/cgroup/memory/memory.stat
+```
+**limits**：
+用于：**物理**、**内核**、**所有（包括交换）**。
+
+不能超过**硬限制**：
+- 一组线程超过硬限制，内核无法回收内存；
+- 触发 **OOM killer**，进程被杀知道再次低于限制。
+
+> 对于**数据库**等状态系统，不能杀进程，得用 `oom-notifier`。
+同样是超过限制：
+- `cgroup` 中的所有进程冻结，通知发给了用户空间；
+- 用户空间可以 `raise limits`, `migrate containers` 等；
+- 低于限制才解冻。
+
+### Cpuset cgroup
+
+- **pin** 组到指定的 `cpu`；
+- 为特定应用保留 `cpu`；
+- 减少缓存刷新导致的性能损失；
+- `NUMA` 系统。
 
 ---
 
@@ -958,6 +1001,68 @@ ENTRYPOINT ["hamba"]
 
 ---
 
+### 安全
+
+- `capabilities`；
+  - 容器默认关闭所有危险的；
+  - 通过 `docker run --cap-add ` 添加；
+- `seccomp`: secure computing。容器搞定，不用操心；
+- `security modules`: 
+  - `SELinux`(Red Hat);
+  - `AppArmor`(AppArmor).
+  - `LSM` 给所有进程操作加了一层访问控制；
+  - 容器搞定，不用操心。
+
+---
+
+### copy-on-system
+
+- 允许共享数据的机制；
+- 出现的数据是一份拷贝，但只是链接到原来的数据；
+- 当改变共享数据时才实际复制；
+
+#### AUFS
+
+- 按照特殊顺序合并多个分支；
+- 每个分支只是一个普通文件夹；
+  - 至少一个**只读**分支（最底部）；
+  - 只有一个**读写**分支（最顶部）。
+
+**打开文件**：
+- `O_RDONLY`:
+  - 从顶上开始每个分支找；
+  - 打开第一个找到的。
+- `OWRONLY` 或 `O_RDWR`:
+  - 如果在顶上，打开之；
+  - 如果在其他分支，复制到顶上；
+  - 如果不存在，在顶上创建。
+
+**性能**：
+- `mount()` 快，所以创建容器快；
+- 读写拥有原生性能；
+- `open()` 两种情况性能昂贵：
+  - 写大文件（日志、数据库）；
+  - 在许多层上搜索许多文件夹；
+- 当同一容器启动多次：
+  - 磁盘上的数据只加载一次，在内存中只缓存一次；
+  - `dentries` 会重复。
+
+#### Overlay2
+
+- 比 `AUFS` 简单，只能有两层；
+- 在层间使用硬连接，提高 `open()` & `stat()` 性能。
+
+---
+
+### Docker 引擎组成
+
+- dockerd
+- containerd
+- containerd-shim
+- runc
+
+---
+
 # K8S 教程
 
 ## 部署应用
@@ -1013,3 +1118,9 @@ curl http://localhost:8001/version
 **主节点**管理**工作节点**，**工作节点**有多个 `Pod`。
 
 **主节点**自动处理集群中**工作节点**调度 `pod`。
+
+- `pod` 中的容器共享一个**网络空间**；
+  - `docker fun --net=container:<container_id>`
+- 有一个特殊 `sandbox` 容器；
+- 使用 `k8s.gcr.io/pause` 共享网络；
+- `pod` 中的容器有独立的文件系统，通过 `volumes` 共享文件夹；
