--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -8,8 +8,90 @@ categories: ElasticSearch
 
 # ES
 
-`bulk` 批量加入文档：
+### 入门操作
 
-```bash
+#### `bulk` 批量加入文档
+
+```shell
 curl -H "Content-Type: application/json" -XPOST "localhost:9200/<index-name>/_bulk?pretty&refresh" --data-binary "@data.json"
 ```
+
+> 文档数量最好 `1000 - 5000`, 总大小 `5MB - 15MB`。
+
+
+#### basic search
+
+**查找所有**
+
+```shell
+curl --request GET \
+  --url http://localhost:9200/bank/_search \
+  --header 'content-type: application/json' \
+  --data '{
+	"query": {
+		"match_all": {}
+	},
+	"sort": [
+		{ "account_number": "asc" }
+	],
+	"from": 10,
+	"size": 10
+}'
+```
+
+- 如果没有 `from` 和 `size` 返回的是前 10 条。
+
+返回样例：
+
+```json
+{
+  "took" : 63,
+  "timed_out" : false,
+  // 查询的分片以及各种情况
+  "_shards" : {
+    "total" : 5,
+    "successful" : 5,
+    "skipped" : 0,
+    "failed" : 0
+  },
+  "hits" : {
+    "total" : {
+        "value": 1000,
+        "relation": "eq"
+    },
+    "max_score" : null,
+    "hits" : [ {
+      "_index" : "bank",
+      "_type" : "_doc",
+      "_id" : "0",
+      "sort": [0],
+      "_score" : null,
+      "_source" : {"account_number":0,"balance":16623,"firstname":"Bradshaw","lastname":"Mckenzie","age":29,"gender":"F"}
+    }, {
+      "_index" : "bank",
+      "_type" : "_doc",
+      "_id" : "1",
+      "sort": [1],
+      "_score" : null,
+      "_source" : {"account_number":1,"balance":39225,"firstname":"Amber","lastname":"Duke","age":32,"gender":"M"}
+    } ]
+  }
+}
+```
+
+**匹配查询**
+
+```shell
+curl --request GET \
+  --url http://localhost:9200/bank/_search \
+  --header 'content-type: application/json' \
+  --data '{
+	"query": {
+		"match": {"address": "mill lane"}
+	}
+}'
+```
+
+> 这样会查询 `address` 包含 `mill` **或** `lane` 的。
+
+> 要精确查包含 `mill lane` 的就要吧 `match` --> `match_phrase`。
