--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -43,7 +43,7 @@ curl --request GET \
 
 返回样例：
 
-```json
+```json5
 {
   "took" : 63,
   "timed_out" : false,
@@ -92,6 +92,23 @@ curl --request GET \
 }'
 ```
 
-> 这样会查询 `address` 包含 `mill` **或** `lane` 的。
+- 这样会查询 `address` 包含 `mill` **或** `lane` 的；
+- 要精确查包含 `mill lane` 的就要吧 `match` --> `match_phrase`。
 
-> 要精确查包含 `mill lane` 的就要吧 `match` --> `match_phrase`。
+```json5
+{
+  "query": {
+    "bool": {
+      "must": [
+        { "match": { "age": "40" } }
+      ],
+      // 不匹配的
+      "must_not": [
+        { "match": { "state": "ID" } }
+      ]
+    }
+  }
+}
+```
+
+- 还有 `should` 
