--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -21,6 +21,24 @@ curl -H "Content-Type: application/json" -XPOST "localhost:9200/<index-name>/_bu
 
 #### basic search
 
+`bank` 格式如下：
+
+```json
+{
+    "account_number": 568,
+    "balance": 36628,
+    "firstname": "Lesa",
+    "lastname": "Maynard",
+    "age": 29,
+    "gender": "F",
+    "address": "295 Whitty Lane",
+    "employer": "Coash",
+    "email": "lesamaynard@coash.com",
+    "city": "Broadlands",
+    "state": "VT"
+}
+```
+
 **查找所有**
 
 ```shell
@@ -43,7 +61,7 @@ curl --request GET \
 
 返回样例：
 
-```json5
+```json
 {
   "took" : 63,
   "timed_out" : false,
@@ -95,7 +113,7 @@ curl --request GET \
 - 这样会查询 `address` 包含 `mill` **或** `lane` 的；
 - 要精确查包含 `mill lane` 的就要吧 `match` --> `match_phrase`。
 
-```json5
+```json
 {
   "query": {
     "bool": {
@@ -111,4 +129,53 @@ curl --request GET \
 }
 ```
 
-- 还有 `should` 
+- 还有 `should`；
+  - `must` 和 `should` 会影响匹配文档的 `score`；
+  - `must_not` 当作 `filter` 来用，不影响 `score`。
+
+
+```json
+{
+  "query": {
+    "bool": {
+      "must": { "match_all": {} },
+      "filter": {
+        "range": {
+          "balance": {
+            "gte": 20000,
+            "lte": 30000
+          }
+        }
+      }
+    }
+  }
+}
+```
+
+**聚合**
+
+这里按照 `stats` 聚合，返回 `balance` 的**平均值**以及**聚合的文档数量**并按照 `balance` 倒序。
+
+```json
+{
+  "size": 0,
+  "aggs": {
+    "group_by_state": {
+      "terms": {
+        // state 类型为 text
+        "field": "state.keyword",
+		"order": {
+          "average_balance": "desc"
+        }
+      },
+      "aggs": {
+        "average_balance": {
+          "avg": {
+            "field": "balance"
+          }
+        }
+      }
+    }
+  }
+}
+```
