--- a/_posts/2020-10-11-ES 教程笔记.md
+++ b/_posts/2020-10-11-ES 教程笔记.md
@@ -8,9 +8,9 @@ categories: ElasticSearch
 
 # ES
 
-### 入门操作
+## 入门操作
 
-#### `bulk` 批量加入文档
+### `bulk` 批量加入文档
 
 ```shell
 curl -H "Content-Type: application/json" -XPOST "localhost:9200/<index-name>/_bulk?pretty&refresh" --data-binary "@data.json"
@@ -19,7 +19,7 @@ curl -H "Content-Type: application/json" -XPOST "localhost:9200/<index-name>/_bu
 > 文档数量最好 `1000 - 5000`, 总大小 `5MB - 15MB`。
 
 
-#### basic search
+### basic search
 
 `bank` 格式如下：
 
@@ -179,3 +179,12 @@ curl --request GET \
   }
 }
 ```
+
+## index 模型
+
+**静态设置**
+
+- `index.number_of_shards`: **主分片**的数量，只能在创建时设置；
+- `index.number_of_routing_shards`: 分割 `index` 的路由分片的数量；
+
+**动态设置**
